--- a/mods/ts/weapons/missiles.yaml
+++ b/mods/ts/weapons/missiles.yaml
@@ -25,7 +25,7 @@
 		TrailInterval: 1
 		TrailCount: 2
 		TrailDelay: 0
-		ContrailLength: 16
+		ContrailLength: 12
 		ContrailWidth: 96
 		ContrailStartColor: BB8800
 		ContrailStartColorAlpha: 16
@@ -36,8 +36,8 @@
 	Warhead@1Dam: SpreadDamage
 		Spread: 108
 		Falloff: 100, 50, 25, 12, 6, 3, 0
-		Damage: 2500
-		ValidTargets: Ground, Water, Air
+		Damage: 5500
+		ValidTargets: Ground, Water, Air, Trees
 		Versus:
 			None: 25
 			Wood: 65
@@ -48,7 +48,7 @@
 	Warhead@2Eff: CreateEffect
 		Explosions: small_clsn
 		ImpactSounds: expnew12.aud
-		ValidTargets: Ground, Air
+		ValidTargets: Ground, Air, Trees
 	Warhead@3EffWater: CreateEffect
 		Explosions: small_watersplash
 		ExplosionPalette: player
@@ -65,27 +65,30 @@ Bazooka:
 
 HoverMissile:
 	Inherits: ^DefaultMissile
-	ReloadDelay: 60
-	Burst: 2
+	ReloadDelay: 40
 	Range: 9c0
 	Report: hovrmis1.aud
 	Warhead@1Dam: SpreadDamage
-		Damage: 3000
+		Damage: 4500
 
 HoverMissileDual:
 	Inherits: HoverMissile
+	Burst: 2
+	ReloadDelay: 50
+
+HoverMissileQuad:
+	Inherits: HoverMissile
 	Burst: 4
-	ReloadDelay: 80
+	ReloadDelay: 100
 
 MammothTusk:
 	Inherits: ^DefaultMissile
 	ReloadDelay: 80
-	Report: misl1.aud
-	# ValidTargets: Ground, Water, Air
+	Report: hovrmis1.aud
 	Burst: 2
 	Warhead@1Dam: SpreadDamage
 		Spread: 144
-		Damage: 4000
+		Damage: 6400
 		# ValidTargets: Air
 		Versus:
 			None: 100
@@ -104,10 +107,14 @@ BikeMissile:
 	Inherits: ^DefaultMissile
 	Report: misl1.aud
 	ValidTargets: Ground
-	ReloadDelay: 40
+	ReloadDelay: 35
 	Warhead@1Dam: SpreadDamage
-		Damage: 5500
-		ValidTargets: Ground, Air
+		Damage: 5000
+
+BikeMissileDual:
+	Inherits: BikeMissile
+	Burst: 2
+	ReloadDelay: 45
 
 Dragon:
 	Inherits: ^DefaultMissile
@@ -115,7 +122,7 @@ Dragon:
 	Burst: 2
 	Report: misl1.aud
 	Warhead@1Dam: SpreadDamage
-		Damage: 5000
+		Damage: 5500
 
 Hellfire:
 	Inherits: ^DefaultMissile
