--- a/mods/ts/weapons/missiles.yaml
+++ b/mods/ts/weapons/missiles.yaml
@@ -103,6 +103,11 @@ MammothTusk:
 		ImpactSounds: expnew07.aud
 	-Warhead@3EffWater:
 
+MammothTuskMk2:
+	Inherits: MammothTusk
+	Range: 9c512
+	MinRange: 0c512
+
 BikeMissile:
 	Inherits: ^DefaultMissile
 	Report: misl1.aud
