基于ora原生坐标系的vectorBooster抛射体。 修复一些bug，完善一些功能。 添加一些细节功能

--- a/mods/ts/3dtest/meshes.yaml
+++ b/mods/ts/3dtest/meshes.yaml
@@ -86,3 +86,18 @@ mmr-test:
 		body: body-combine
 			Material: body
 			UseDQBSkin: true
+		idle: Missile
+			Material: turret
+
+turret-test2:
+	Skeleton: TextTurret
+	Meshes:
+		turret: TurretMesh
+			Material: turret
+		idle: Missile
+			Material: turret
+
+missile:
+	Meshes:
+		idle: Missile
+			Material: turret
