--- a/mods/ts/rules/defaults.yaml
+++ b/mods/ts/rules/defaults.yaml
@@ -879,6 +879,9 @@
 		GrantPermanently: true
 	Mobile:
 		PauseOnCondition: empdisable || traped
+	Targetable@cyborg:
+		TargetTypes: Cyborg
+
 
 ^CivilianInfantry:
 	Inherits@1: ^Infantry
