--- a/mods/ts/3dtest/weapons.yaml
+++ b/mods/ts/3dtest/weapons.yaml
@@ -1,75 +1,3 @@
-A10Vulcan:
-	Inherits: ^SA
-	ValidTargets: Ground, Water
-	ReloadDelay: 100
-	MinRange: 4c512
-	Burst: 30
-	BurstDelays: 1
-	Range: 10c0
-	Report: cygun_a.wav, cygun_b.wav
-	FirstBurstTargetOffset: -3000,0,0
-	FollowingBurstTargetOffset: 300,0,0
-	Projectile: Bullet
-		Speed: 1100
-		LaunchAngle: 0
-		Inaccuracy: 1c0
-	Warhead@1Dam: Spread3DDamage
-		Damage: 1000
-		Spread: 0c268
-
-
-A10Napalm:
-	ReloadDelay: 100
-	Burst: 24
-	BurstDelays: 2
-	Range: 5c0
-	TargetActorCenter: true
-	ValidTargets: Ground, Trees
-	# Projectile: GravityBomb
-	# 	Velocity: 72, 0, -90
-	# 	Acceleration: 0, 0, -8
-	# 	Shadow: true
-	# 	Palette: ra
-	# 	Image: zbomb
-	# 	Palette: player
-	# 	IsPlayerPalette: true
-	Projectile: Bullet
-		InstantDropToGround: true
-		Speed: 226
-		Blockable: true
-		Shadow: true
-		LaunchAngle: 60
-		Inaccuracy: 800
-		Image: DISCUS
-		Palette: effect
-		BounceCount: 5
-		Width: 324
-	Warhead@1Dam: SpreadDamage
-		Spread: 512
-		Falloff: 100, 50, 25, 12, 6, 3, 0
-		Damage: 16000
-		Versus:
-			None: 200
-			Wood: 90
-			Light: 75
-			Heavy: 32
-			Concrete: 100
-		DamageTypes: Prone100Percent, TriggerProne, ExplosionDeath
-		ValidTargets: Ground, Trees
-	Warhead@2Eff: CreateEffect
-		Explosions: large_brnl
-		ImpactSounds: expnew09.aud
-		ValidTargets: Ground, Trees, Air
-	Warhead@3EffWater: CreateEffect
-		Explosions: small_watersplash
-		ExplosionPalette: player
-		ImpactSounds: ssplash3.aud
-		ValidTargets: Water
-		InvalidTargets: Vehicle
-	Warhead@4Smu: LeaveSmudge
-		SmudgeType: LargeScorch
-		InvalidTargets: Vehicle, Building, Wall
-
 
 ^SA:
 	ValidTargets: Ground, Water, Air
@@ -101,8 +29,8 @@ A10Napalm:
 	Warhead@1Dam: Spread3DDamage
 		Damage: 900
 		DamageOne: true
-		DamageBlocker: true
-		OnlyBlocker: true
+		OnlyDamageBlockerWhenBlocked: true
+		OnlyDamageDirectlyHit: true
 		Spread: 0c76
 		Falloff: 100, 100
 		Versus:
@@ -122,6 +50,35 @@ A10Napalm:
 		ExplosionPalette: ra
 		ValidTargets: Water
 		InvalidTargets: Vehicle
+
+A10Vulcan:
+	Inherits: ^SA
+	ValidTargets: Ground, Water
+	ReloadDelay: 100
+	MinRange: 4c512
+	Burst: 30
+	BurstDelays: 1
+	Range: 10c0
+	Report: cygun_a.wav, cygun_b.wav
+	FirstBurstTargetOffset: -3000,0,0
+	FollowingBurstTargetOffset: 300,0,0
+	Projectile: Bullet
+		Speed: 1100
+		LaunchAngle: 0
+		Inaccuracy: 1c0
+	Warhead@1Dam: Spread3DDamage
+		Damage: 2500
+		Falloff: 100, 100, 30
+		Spread: 0c268
+		DamageOne: false
+		OnlyDamageDirectlyHit: false
+		Versus:
+			None: 100
+			Wood: 60
+			Light: 50
+			Heavy: 30
+			Concrete: 10
+
 
 DropVulcan:
 	Inherits: ^SA
@@ -236,7 +193,7 @@ HarpyClawMG:
 		ContrailStartColor: A0FFA0C0
 		Inaccuracy: 290
 		Speed: 1000
-		OnlyBlocker: false
+		OnlyDamageDirectlyHit: false
 	Warhead@1Dam: Spread3DDamage
 		Damage: 1250
 		Spread: 0c128
@@ -301,6 +258,7 @@ VulcanMG:
 	ReloadDelay: 45
 	Burst: 16
 	BurstDelays: 2
+	ValidTargets: Ground, Water, Air
 	Projectile: Bullet
 		LifeTime: 11
 		Inaccuracy: 410
