完全平滑的尾线渲染，bullet加速度属性，游戏性修改

--- a/mods/ts/3dtest/weapons.yaml
+++ b/mods/ts/3dtest/weapons.yaml
@@ -11,10 +11,8 @@
 		DetectTargetBeforeDist: 2c0
 		ContrailLength: 3
 		ContrailWidth: 50
-		ContrailStartColor: FFFF88
-		ContrailStartColorAlpha: 255
-		ContrailEndColor: BBBBBB
-		ContrailEndColorAlpha: 10
+		ContrailStartColor: FFFF88FF
+		ContrailEndColor: BBBBBB0A
 		ContrailWidthFadeRate: 0.75
 		ContrailDelay: 0
 		#ContrailBlendMode: ScreenAdditive
