--- a/mods/ts/weapons/missiles.yaml
+++ b/mods/ts/weapons/missiles.yaml
@@ -24,18 +24,30 @@
 		CruiseAltitude: 3c0
 		AllowSnapping: true
 		TerrainHeightAware: true
+
 		TrailImage: small_smoke_trail
 		TrailInterval: 1
-		TrailCount: 2
+		TrailCount: 0 #2
 		TrailDelay: 0
+
 		ContrailLength: 12
-		ContrailWidth: 96
-		ContrailStartColor: BB8800
-		ContrailStartColorAlpha: 16
-		ContrailEndColor: AA0000
+		ContrailWidth: 178
+
+		ContrailUseInnerOuterColor: true
+
+		ContrailStartColor: DFA833
+		ContrailStartColorOuter: FFDD44
+		ContrailStartColorAlpha: 255
+		ContrailStartColorAlphaOuter: 0
+
+		ContrailEndColor: AA3010
+		ContrailEndColorOuter: AA3010
+		ContrailEndColorAlpha: 64
+		ContrailEndColorAlphaOuter: 0
+
 		ContrailWidthFadeRate: 1
 		ContrailDelay: 0
-		ContrailBlendMode: ScreenAdditive
+		ContrailBlendMode: Alpha #ScreenAdditive
 	Warhead@1Dam: SpreadDamage
 		Spread: 108
 		Falloff: 100, 50, 25, 12, 6, 3, 0
@@ -81,14 +93,7 @@
 		Width: 76
 		ProximityRange: 256
 		ProximitySnapping: true
-		ContrailLength: 16
-		ContrailWidth: 96
-		ContrailStartColor: BB8800
-		ContrailStartColorAlpha: 167
-		ContrailEndColor: AA0000
-		ContrailWidthFadeRate: 1
-		ContrailDelay: 0
-		ContrailBlendMode: ScreenAdditive
+
 		LaunchAngle: 27
 		ZOffset: 10
 		Inaccuracy: 1c0
@@ -101,9 +106,29 @@
 		MeshScale: 4
 		TrailImage: small_smoke_trail
 		TrailInterval: 1
-		TrailCount: 2
+		TrailCount: 0 #2
 		TrailDelay: -1 # use IgnitionDelay
 		JetDelay: -1 # use IgnitionDelay
+
+		ContrailLength: 12
+		ContrailWidth: 178
+
+		ContrailUseInnerOuterColor: true
+
+		ContrailStartColor: DFA833
+		ContrailStartColorOuter: FFDD44
+		ContrailStartColorAlpha: 255
+		ContrailStartColorAlphaOuter: 0
+
+		ContrailEndColor: AA3010
+		ContrailEndColorOuter: AA3010
+		ContrailEndColorAlpha: 64
+		ContrailEndColorAlphaOuter: 0
+
+		ContrailWidthFadeRate: 1
+		ContrailDelay: 0
+		ContrailBlendMode: Alpha #ScreenAdditive
+
 		ExplodeUnderThisAltitude: 0
 		UsingScat: false
 		ScatWeapon: Grenade
